unpackaged/main/default/objects/Academic_Provider_Mapping__c/Academic_Provider_Mapping__c.object-meta.xml
<CustomObject>
    <label>Academic Provider Mapping</label>
    <nameField>
        <label>Course Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Provider Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>