unpackaged/main/default/objects/Academic_Provider_Mapping__c/fields/Academic_Provider__c.field-meta.xml
<CustomField>
    <fullName>Academic_Provider__c</fullName>
    <label>Academic Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only a School of Record may be used.</errorMessage>
        <filterItems>
            <field>Account.School_of_Record__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Academic Provider Mappings</relationshipLabel>
    <relationshipName>School_of_Record_Mappings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>