unpackaged/main/default/objects/Academic_Provider_Mapping__c/fields/Corequisite_Description__c.field-meta.xml
<CustomField>
    <fullName>Corequisite_Description__c</fullName>
    <inlineHelpText>The message that will be displayed to the student regarding corequisites.</inlineHelpText>
    <label>Corequisite Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>