unpackaged/main/default/objects/Academic_Provider_Mapping__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Academic Provider Mappings</relationshipLabel>
    <relationshipName>Academic_Provider_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>