unpackaged/main/default/objects/Academic_Provider_Mapping__c/fields/Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Title__c</fullName>
    <label>Course Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>