unpackaged/main/default/objects/Academic_Provider_Mapping__c/fields/Credit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hours__c</fullName>
    <label>Credit Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>