unpackaged/main/default/objects/Academic_Provider_Mapping__c/fields/Prerequisite_Description__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_Description__c</fullName>
    <inlineHelpText>The message that will be displayed to the student regarding prerequisites.</inlineHelpText>
    <label>Prerequisite Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>