unpackaged/main/default/objects/Academic_Provider_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Course__c</columns>
    <columns>Academic_Provider__c</columns>
    <columns>NAME</columns>
    <columns>Course_Number__c</columns>
    <columns>Credit_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>